creating notes on required output from documentation

--- a/index.html
+++ b/index.html
@@ -11,12 +11,34 @@
     <title>Thomas Hands Portfolio</title>
 </head>
 <header>
-
+    <!-- A navigation bar: A navigation menu at the top. Feel free to use Bootstrap's navbar or create your own. -->
+    <!-- Include links that are applicable to your portfolio, Links should navigate to the appropriate sections -->
 </header>
 <main>
+    <section class="hero">
+        <!-- A jumbotron featuring your picture, your name, and any other information you'd like to include. -->
+    </section>
+    <section class="work">
+        <!-- A work section: A section displaying your work in grid. A section displaying your work in grid. -->
+        <!-- If you need to use placeholder image use placehold.coLinks to an external site. -->
+        <!-- Use Bootstrap cards for each project. The description should give a brief overview of the work. -->
+    </section>
+    <section class="skills">
+        <!-- List out the skills you expect to learn from the bootcamp. -->
+    </section>
+    <section class="About-Contact Me">
+        <!-- An About Me section in the same row. -->
+        <div id="about me">
+
+        </div>
+        <div class="contact me">
+
+        </div>
+    </section>
 
 </main>
-<footer>
+<footer class="footer">
+    <!-- All hyperlinks should have a hover effect. All buttons should display a box shadow upon hover. -->
 
 </footer>
 
