--- a/index.html
+++ b/index.html
@@ -60,7 +60,6 @@
                 <div class="col-sm-8 hero-col-2 hero-second-column">
                     <h1 class="display-4">Thomas Hands</h1>
                     <p class="lead">Fresher than a new born foul to the world of coding</p>
-                    <hr class="my-4">
                     <p class="secondary"> But hitting the ground running and ready to Learn</p>
                 </div>
             </div>
@@ -81,7 +80,6 @@
                                 <p class="card-text">This is a wider card with supporting text below as a natural
                                     lead-in to
                                     additional content. This content is a little bit longer.</p>
-                                <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
                             </div>
                         </div>
                     </div>
@@ -93,7 +91,7 @@
                                 <p class="card-text">This is a wider card with supporting text below as a natural
                                     lead-in to
                                     additional content. This content is a little bit longer.</p>
-                                <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+
                             </div>
                         </div>
                     </div>
@@ -101,11 +99,11 @@
                         <div class="card mb-3">
                             <img src="./images/Thomas Hands-logos_black.png" class="card-img-top" alt="...">
                             <div class="card-body">
-                                <h5 class="card-title">Card title</h5>
+                                <h5 class="card-title">Placeholder</h5>
                                 <p class="card-text">This is a wider card with supporting text below as a natural
                                     lead-in to
                                     additional content. This content is a little bit longer.</p>
-                                <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+
                             </div>
                         </div>
                     </div>
@@ -116,22 +114,10 @@
                     <div class="card mb-3">
                         <img src="./images/Thomas Hands-logos_black.png" class="card-img-top" alt="...">
                         <div class="card-body">
-                            <h5 class="card-title">Card title</h5>
+                            <h5 class="card-title">Placeholder</h5>
                             <p class="card-text">This is a wider card with supporting text below as a natural lead-in to
                                 additional content. This content is a little bit longer.</p>
-                            <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-sm-4">
-                    <div class="card mb-3">
-                        <img src="./images/Thomas Hands-logos_black.png" class="card-img-top" alt="...">
-                        <div class="card-body">
-                            <h5 class="card-title">Card title</h5>
-                            <p class="card-text">This is a wider card with supporting text below as a natural
-                                lead-in to
-                                additional content. This content is a little bit longer.</p>
-                            <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+
                         </div>
                     </div>
                 </div>
@@ -143,7 +129,19 @@
                             <p class="card-text">This is a wider card with supporting text below as a natural
                                 lead-in to
                                 additional content. This content is a little bit longer.</p>
-                            <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+
+                        </div>
+                    </div>
+                </div>
+                <div class="col-sm-4">
+                    <div class="card mb-3">
+                        <img src="./images/Thomas Hands-logos_black.png" class="card-img-top" alt="...">
+                        <div class="card-body">
+                            <h5 class="card-title">Placeholder</h5>
+                            <p class="card-text">This is a wider card with supporting text below as a natural
+                                lead-in to
+                                additional content. This content is a little bit longer.</p>
+
                         </div>
                     </div>
                 </div>
@@ -238,45 +236,47 @@
                 <div class="jumbotron jumbotron-fluid">
                     <div class="container">
                         <h1 class="display-4">About Me</h1>
-                        <p class="lead">This is a modified jumbotron that occupies the entire horizontal space of its
-                            parent.</p>
+                        <p class="lead"> Hi There, I'm Thomas Hands, New to the web Development game, but ready to hit
+                            the ground running.
+                            Originally from the Midlands and had a career in the Arts, Education, and am now a Data
+                            Coordinator.
+                            I
+                            am looking to branch out with my skills and interested in developing my understanding of
+                            front end
+                            development</p>
                     </div>
-                    <p>
-                        <a class="btn btn-primary" data-toggle="collapse" href="#multiCollapseExample1" role="button"
-                            aria-expanded="false" aria-controls="multiCollapseExample1">Toggle first element</a>
-                        <button class="btn btn-primary" type="button" data-toggle="collapse"
-                            data-target="#multiCollapseExample2" aria-expanded="false"
-                            aria-controls="multiCollapseExample2">Toggle second element</button>
-                        <button class="btn btn-primary" type="button" data-toggle="collapse"
-                            data-target=".multi-collapse" aria-expanded="false"
-                            aria-controls="multiCollapseExample1 multiCollapseExample2">Toggle both elements</button>
-                    </p>
-                    <div class="row">
-                        <div class="col">
-                            <div class="collapse multi-collapse" id="multiCollapseExample1">
-                                <div class="card card-body">
-                                    Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry
-                                    richardson ad squid. Nihil anim keffiyeh helvetica, craft beer labore wes anderson
-                                    cred nesciunt sapiente ea proident.
-                                </div>
+
+                    <div class="contact-me">
+                        <form action="mailto:tomhands@me.com" method="post" enctype="text/plain">
+                            <div class="form-group">
+                                <label for="exampleFormControlInput1">Email address</label>
+                                <input type="email" class="form-control" id="exampleFormControlInput1"
+                                    placeholder="name@example.com">
                             </div>
-                        </div>
-                        <div class="col">
-                            <div class="collapse multi-collapse" id="multiCollapseExample2">
-                                <div class="card card-body">
-                                    Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry
-                                    richardson ad squid. Nihil anim keffiyeh helvetica, craft beer labore wes anderson
-                                    cred nesciunt sapiente ea proident.
-                                </div>
+                            <div class="form-group">
+                                <label for="exampleFormControlInput1">Name</label>
+                                <input type="text" class="form-control" id="exampleFormControlInput1"
+                                    placeholder="John Smith">
                             </div>
-                        </div>
+                            <div class="form-group">
+                                <label for="exampleFormControlSelect1">What are you emailing about?</label>
+                                <select class="form-control" id="exampleFormControlSelect1">
+                                    <option>Want to see more?</option>
+                                    <option>Want a quote on a project?</option>
+                                    <option>Have an Idea you would like to run by me?</option>
+                                    <option>General Question/Other</option>
+                                </select>
+                            </div>
+                            <div class="form-group">
+                                <label for="exampleFormControlTextarea1">Message</label>
+                                <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
+                            </div>
+                            <div class="form-group row">
+                                <div class="col-sm-10">
+                                    <button type="submit" class="btn btn-primary">Send it</button>
+                                </div>
+                        </form>
                     </div>
-                </div>
-
-            </div>
-            <div class="contact me">
-
-            </div>
         </section>
 
     </main>
